Spacing fixes

--- a/divisions/css/_department-LP-styles.scss
+++ b/divisions/css/_department-LP-styles.scss
@@ -1,14 +1,3 @@
-.container-fluid {
-    padding: 0px;
-}
-
-@media (max-width: 797px) {
-    body { 
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-}
-
 .cards {
 	margin: auto;
 	float: none;
@@ -170,6 +159,7 @@
 		padding: 0;
 	}
 	@at-root #{&}__item {
+		padding: 0;
 	}
 	@at-root #{&}__link {
 		display: block;
